fix: prevent image stretching with max-height

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 
 .matrix__image {
   width: 100%;
+  max-height: 375px;
 }
 
 .matrix__link {
